--- a/original.scss
+++ b/original.scss
@@ -39,6 +39,7 @@ body {
 /* Links */
 a {
   text-decoration: none;
+  word-wrap: break-word;
 }
 a:focus,
 a:hover {
